--- a/EncuestasMediosTransporte/EncuestasForm/EncuestasForm.csproj
+++ b/EncuestasMediosTransporte/EncuestasForm/EncuestasForm.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormListaDeInforme.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormListaDeInforme.Designer.cs">
+      <DependentUpon>FormListaDeInforme.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormRegistroDeEncuesta.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +68,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormListaDeInforme.resx">
+      <DependentUpon>FormListaDeInforme.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormRegistroDeEncuesta.resx">
       <DependentUpon>FormRegistroDeEncuesta.cs</DependentUpon>
